--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -25,6 +25,7 @@
     border: 1px solid $border-color;
     background: #f8f9fa;
     border-top: none;
+    position: relative;
   }
 
   .row-data {
@@ -42,6 +43,7 @@
     border-top: none;
     border-left: none;
     height: 100%;
+    position: relative;
   }
 
   .cell {
@@ -57,8 +59,40 @@
     outline: none;
     &.selected {
       border: none;
-      outline: 2px solid #3c74ff;
+      outline: 2px solid $primary-blue-color;
       z-index: 2;
+    }
+  }
+
+  & .col-resize,
+  .row-resize {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: $primary-blue-color;
+    opacity: 0;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  & .col-resize {
+    top: 0;
+    width: 4px;
+
+    &:hover {
+      opacity: 1;
+      cursor: col-resize;
+    }
+  }
+
+  & .row-resize {
+    left: 0;
+    height: 4px;
+
+    &:hover {
+      cursor: row-resize;
     }
   }
 }
